--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
+# Enter "yourpassword"
 DATABASE_URL=postgres://postgres:yourpassword@localhost:5432/vinyl-store?sslmode=disable
+
+# Enter "your_secret_key"
 JWT_SECRET=your_secret_key
